--- a/position.html
+++ b/position.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Arvo&display=swap" rel="stylesheet">
 
 </head>
 <header></header>
@@ -20,10 +21,17 @@
 
             </a>
             <div class="video-container">
-                <div class="video-title"> </div>
+                <div class="video-title">Video Title</div>
                 <div class="video-body">
                     <div class="video-block"></div>
-                    <div class="video-text"></div>
+                    <div class="video-text">
+                        <p class="text-red text-red-capation">Category Name -
+                            <span class="text-date">June 26, 2013</span>
+                        </p>
+                        <div class="splitter"></div>
+                        <p class=" text-red text-red-body">This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.<br> Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh
+                            vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit.</p>
+                    </div>
                 </div>
             </div>
         </div>
