--- a/position.html
+++ b/position.html
@@ -9,10 +9,17 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Arvo&display=swap" rel="stylesheet">
 
+    <script src="https://kit.fontawesome.com/0c54894880.js" crossorigin="anonymous"></script>
+
 </head>
-<header></header>
+
 
 <body>
+    <header></header>
+    <div class="social-menu">
+        <a href="#" class="social-menu-item fb"></a>
+        <a href="#" class="social-menu-item tw"></a>
+    </div>
 
     <div class="background">
         <div class="container">
@@ -20,22 +27,30 @@
                 <img src="img/logo.png" alt="">
 
             </a>
+
             <div class="video-container">
-                <div class="video-title">Video Title</div>
-                <div class="video-body">
-                    <div class="video-block"></div>
-                    <div class="video-text">
-                        <p class="text-red text-red-capation">Category Name -
-                            <span class="text-date">June 26, 2013</span>
-                        </p>
-                        <div class="splitter"></div>
-                        <p class=" text-red text-red-body">This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.<br> Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh
-                            vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit.</p>
+                <div class="video-container-position ">
+                    <div class="video-title">Video Title</div>
+                    <div class="video-body">
+                        <div class="video-block">
+                            <div class="play-btn"></div>
+
+                        </div>
+                        <div class="video-text">
+                            <p class="text-red text-red-capation">Category Name -
+                                <span class="text-date">June 26, 2013</span>
+                            </p>
+                            <div class="splitter"></div>
+                            <p class=" text-red text-red-body">This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.<br> Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet
+                                nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit.</p>
+                        </div>
                     </div>
+
                 </div>
             </div>
         </div>
     </div>
+    <footer></footer>
 
 
 </body>
